--- a/src/main/webapp/menu.html
+++ b/src/main/webapp/menu.html
@@ -80,7 +80,8 @@
                                     <a class="btn btn-primary btn-lg" href="TrabajoARealizarC?action=update" role="button">U</a>
                                     <a class="btn btn-primary btn-lg" href="TrabajoARealizarC?action=delete" role="button">D</a>
                                 </p>
-                            </div><div class="tm-icon-text-box col-md-4">
+                            </div>
+                            <div class="tm-icon-text-box col-md-4">
                                 <h3 align="center" class="tm-icon-text-box-title">Horario</h3>
                                 <p align="center">
                                     <a class="btn btn-primary btn-lg" href="HorarioC?action=create" role="button">C</a>
@@ -99,6 +100,15 @@
 
                         </div>
 
+                        <br>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                            <div class="tm-icon-text-box col-md-4">
+                                <h3 align="center" class="tm-icon-text-box-title">Categoria</h3>
+                                <p align="center">
+                                    <a class="btn btn-primary btn-lg" href="CategoriaC?action=create" role="button">C</a>
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
