reporte mensaje creado y terminado

--- a/src/main/webapp/menu.html
+++ b/src/main/webapp/menu.html
@@ -108,6 +108,12 @@
                                     <a class="btn btn-primary btn-lg" href="CategoriaC?action=create" role="button">C</a>
                                 </p>
                             </div>
+                            <div class="tm-icon-text-box col-md-4">
+                                <h3 align="center" class="tm-icon-text-box-title">Reporte Mensajes</h3>
+                                <p align="center">
+                                    <a class="btn btn-primary btn-lg" href="MensajesReporte?action=create" role="button">R</a>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
