Se arreglo reporte.jsp

--- a/src/main/webapp/menu.html
+++ b/src/main/webapp/menu.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <div class="tm-icon-text-boxes-container">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                        <div class="row">
                             <div class="tm-icon-text-box col-md-4">
                                 <h3 align="center" class="tm-icon-text-box-title">Usuario</h3>
                                 <p align="center">
@@ -62,9 +62,7 @@
                                     <a class="btn btn-primary btn-lg" href="ServicioC?action=delete" role="button">D</a>
                                 </p>
                             </div>
-                        </div>
-                        <br>
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                        
                             <div class="tm-icon-text-box col-md-4">
                                 <h3 align="center" class="tm-icon-text-box-title">Funciones</h3>
                                 <p align="center">
@@ -100,8 +98,6 @@
 
                         </div>
 
-                        <br>
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                             <div class="tm-icon-text-box col-md-4">
                                 <h3 align="center" class="tm-icon-text-box-title">Categoria</h3>
                                 <p align="center">
@@ -114,7 +110,7 @@
                                     <a class="btn btn-primary btn-lg" href="MensajesReporte?action=create" role="button">R</a>
                                 </p>
                             </div>
-                        </div>
+                        
                     </div>
                 </div>
 
